plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.0-M1'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.recipe.gpt'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// spring security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'

	// querydsl
	implementation 'com.querydsl:querydsl-jpa'
	implementation 'com.querydsl:querydsl-apt'

	// jwt
	implementation 'io.jsonwebtoken:jjwt:0.9.1'
	compileOnly 'javax.xml.bind:jaxb-api:2.3.1'

	// webflux
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'

	// configuration
	compileOnly "org.springframework.boot:spring-boot-configuration-processor"
	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

	// oauth2
	implementation 'org.springframework.security:spring-security-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
}

tasks.named('test') {
	useJUnitPlatform()
}
